GROOVY-9881